--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main navigation links
 main:
   - title: "Resume"
-    url: /files/Resume_Mohammad_Shahedur_Rahman.pdf
+    url: /files/DeleAdelusiResume2026.pdf
 
   - title: "Updates"
     url: /updates/
@@ -20,6 +20,9 @@ main:
 
   - title: "Certifications"
     url: /certifications/  
+
+  - title: "Affliations"
+    url: /affliations/
 
   - title: "Awards"
     url: /awards/
