--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,14 +6,11 @@ main:
   - title: "Updates"
     url: /updates/
 
-  - title: "Experiences"
-    url: /experiences/
-
   - title: "Skills"
     url: /skills/
 
   - title: "Certifications"
     url: /certifications/  
 
-  - title: "Affliations"
-    url: /affliations/
+  - title: "Affiliations"
+    url: /affiliations/
