--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/dele-adelusi/"
+  linkedin         : "/dele-adelusi"
   orcid            : "https://orcid.org/XXXXXX"
   pinterest        :
   soundcloud       :
