--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,20 @@
 # main navigation links
 main:
   - title: "Resume"
-    url: /files/DeleAdelusiResume2026.pdf
+    url: /files/Dele AdelusiResume2026.pdf
 
   - title: "Experiences"
     url: /experiences/
 
-  - title: "Publications"
-    url: /publications/
-    
   - title: "Skills"
     url: /skills/
 
+  - title: "Publications"
+    url: /publications/
+  
+  - title: "Projects"
+    url: /proj/
+      
   - title: "Certifications"
     url: /certifications/  
 
@@ -20,3 +23,7 @@ main:
 
   - title: "Media Mentions"
     url: /newsmedia/
+    
+  - title: "Blogs"
+    url: /https://deleadelusi.github.io/blog
+    
